likes can be toggled, suggestion changed to stateful component

--- a/source/components/suggestion/suggestion.scss
+++ b/source/components/suggestion/suggestion.scss
@@ -21,8 +21,8 @@
     display: inline-block;
     width: 50%;
 
-    span {
-      background: yellow;
+    &:not(.liked) span {
+      filter: grayscale(50%);
     }
   }
 
