--- a/source/components/deleteModal/deleteModal.scss
+++ b/source/components/deleteModal/deleteModal.scss
@@ -2,7 +2,7 @@
   position: fixed;
   width: 100vw;
   height: 100vh;
-  background: rgba(39, 39, 39, 0.2);
+  background: rgba(39, 39, 39, 0.3);
   top: 0;
   left: 0;
 
@@ -11,11 +11,12 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    max-width: 50%;
+    max-width: 500px;
     min-height: 100px;
     background: #fff;
     border-radius: 10px;
     padding: 20px;
+    box-shadow: 3px 3px 10px #333;
   }
 
   &__buttons {
