--- a/source/components/main/main.scss
+++ b/source/components/main/main.scss
@@ -1,10 +1,8 @@
 .main {
-  margin: 0 20px;
-
   &-title {
     text-align: center;
     font-size: 40px;
-    color: white;
+    color: #333;
   }
   .suggestion-lists-container {
     display: grid;
