--- a/source/scss/vars.scss
+++ b/source/scss/vars.scss
@@ -1,2 +1,12 @@
-$color-main-dark: #3d4868;
-$color-main-light: #58bdf8;
+$color-main-dark: #f5f5f5;
+$color-main-light: #ececec;
+
+$color-shadow: #cfcfcf;
+
+$box-shadow: 2px 2px 5px $color-shadow;
+
+$color-red: #ff5f5f;
+$color-green: #8df14a;
+$color-yellow: #fc3;
+$color-purple: #d654d6;
+$color-teal: #13b6c2;
