--- a/source/components/addSuggestion/addSuggestion.scss
+++ b/source/components/addSuggestion/addSuggestion.scss
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  // margin: 80px 0;
   margin-bottom: 80px;
   background: white;
   box-shadow: $box-shadow;
@@ -15,19 +14,19 @@
     border: none;
     margin: 10px 0;
     padding: 10px;
-    background: #eee;
-    color: #333;
+    background: $color-main-dark;
+    color: $color-dark-gray;
 
     &::placeholder {
-      color: #888;
+      color: $color-light-gray;
     }
   }
 
   select > option {
-    color: #333;
+    color: $color-dark-gray;
 
     &:first-of-type {
-      color: #aaa;
+      color: $color-light-gray;
     }
   }
 
