--- a/source/components/deleteModal/deleteModal.scss
+++ b/source/components/deleteModal/deleteModal.scss
@@ -13,9 +13,9 @@
     transform: translate(-50%, -50%);
     max-width: 500px;
     min-height: 100px;
-    background: #fff;
+    background: white;
     padding: 20px;
-    box-shadow: 3px 3px 10px #333;
+    box-shadow: 3px 3px 10px $color-dark-gray;
   }
 
   &__buttons {
