--- a/source/components/filter/filter.scss
+++ b/source/components/filter/filter.scss
@@ -19,7 +19,7 @@
   input:checked ~ span:before {
     content: "";
     background: linear-gradient(45deg, $color-red, $color-yellow, $color-green);
-    border: 6px #555 solid;
+    border: 6px $color-middle-gray solid;
     box-sizing: border-box;
   }
 
@@ -45,7 +45,7 @@
 
   span {
     margin: 6px;
-    color: #333;
+    color: $color-dark-gray;
     width: 100%;
     height: 100%;
   }
@@ -55,7 +55,7 @@
     display: inline-block;
     height: 24px;
     width: 24px;
-    background: #555;
+    background: $color-middle-gray;
     margin-right: 6px;
     position: relative;
     top: 3px;
