--- a/source/components/main/main.scss
+++ b/source/components/main/main.scss
@@ -2,7 +2,7 @@
   &-title {
     text-align: center;
     font-size: 40px;
-    color: #333;
+    color: $color-dark-gray;
   }
   .suggestion-lists-container {
     display: grid;
