--- a/source/scss/site.scss
+++ b/source/scss/site.scss
@@ -22,7 +22,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
-  background: $color-main-dark;
+  background: $color-main-light;
 }
 
 .mouse-user * {
