--- a/source/scss/vars.scss
+++ b/source/scss/vars.scss
@@ -1,12 +1,16 @@
-$color-main-dark: #f5f5f5;
-$color-main-light: #ececec;
+$color-main-dark: #ececec;
+$color-main-light: #f5f5f5;
 
 $color-shadow: #cfcfcf;
-
-$box-shadow: 2px 2px 5px $color-shadow;
+$color-light-gray: #aaa;
+$color-middle-gray: #555;
+$color-dark-gray: #333;
 
 $color-red: #ff5f5f;
 $color-green: #8df14a;
 $color-yellow: #fc3;
 $color-purple: #d654d6;
 $color-teal: #13b6c2;
+$color-blue: #27affd;
+
+$box-shadow: 2px 2px 5px $color-shadow;
